# L2W1v2.0

./: .gitignore  .pre-commit-config.yaml  CODEBASE_STATUS_REPORT.md  CODE_AUDIT_REPORT.md  DEPLOYMENT_LINUX.md  ENVIRONMENT_SETUP.md  ENV_CONFIG_SUMMARY.md  HARDENING_CHANGELOG.md  INSTALL.md  INSTALL_CONDA.md  PROJECT_STRUCTURE.md  README.md  RUN_WITH_REAL_DATA.md  STAGE2_COMPLETION_SUMMARY.md  TESTING_GUIDE.md  check_env.py  cleanup_report.md  download_models.sh  fix_frontier.py  fix_prompter.py  install.sh  install_conda.sh  install_linux.sh  key.txt  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_l2w1v2.txt  requirements_windows.txt  run_batch.py  run_frontier.ps1  run_pipeline.py  run_split.bat  run_test100.ps1  run_tests.sh  stage2_helpinweb.md  verify_installation.py  实验设计书.md
archive/: module5_evaluate_spec.md
configs/: __init__.py  router_config.yaml
docs/: AGENT_A_SETUP.md  CLEANUP_STAGE10_PLAN.md  CLEANUP_STAGE10_REPORT.md  CLEANUP_STAGE1_SUMMARY.md  CLEANUP_STAGE4_REPORT.md  CLEANUP_STAGE5_PLAN.md  CLEANUP_STAGE5_REPORT.md  CLEANUP_STAGE6_PLAN.md  CLEANUP_STAGE6_REPORT.md  CLEANUP_STAGE7_PLAN.md  CLEANUP_STAGE7_REPORT.md  CLEANUP_STAGE8_PLAN.md  CLEANUP_STAGE8_REPORT.md  CLEANUP_STAGE9_PLAN.md  CLEANUP_STAGE9_REPORT.md  DATA_PROTOCOL_README.md  PROJECT_CONTEXT.md  RESTART_EXECUTION_MANUAL.md  ROUTER_DESIGN.md  SERVER_EXECUTION_COMMANDS.md  SERVER_REPRODUCTION_GUIDE.md  SERVER_RERUN_PLAN.md  SH-DA++_项目技术报告.md  STAGE_0_1_EXECUTION_GUIDE.md  V_COT_DESIGN.md  data_file.md  data_protocol_v1.json  data_protocol_v2.json  module3_sft_spec.md  (+5 more)
(+432 files in other folders)
