[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "l2w1"
version = "0.1.0"
description = "Reusable L2W1 OCR correction utilities."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "hatchling",
    "mypy>=1.14",
    "pre-commit>=3.6",
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/l2w1"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
files = ["src/l2w1"]
mypy_path = "src"
strict = true
warn_unreachable = true
show_error_codes = true
pretty = true
